# kind-kestrel

./: LICENSE  README.md
clox/: .gitignore  CMakeLists.txt  build.zig
clox/resources/: bad_this2.lox  bm_zoo.lox  class1.lox  class2.lox  class_method_case.lox  closure.lox  fact.lox  fib.lox  for.lox  function.lox  globals.lox  ifstmt.lox  scopes.lox  superclasses1.lox  superclasses2.lox  trace.lox  while.lox
clox/src/: chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
cslox/: CsLox.csproj  Program.cs
cslox/interpreter/: Facade.cs
cslox/interpreter/lexer/: Lexer.cs  LexerTest.cs  Token.cs  TokenTest.cs
der-lox/: build.zig  readme.md
der-lox/resource/: comments.lox  inheritance.lox
der-lox/src/: Chunk.h  Common.cc  Common.h  Compiler.cc  Compiler.h  Interpreter.cc  Interpreter.h  Lexer.cc  Lexer.h  Main.cc  Parser.cc  Parser.h  Printable.cc  Printable.h  Runner.cc  Runner.h  Statement.h  Token.cc  Token.h  Vm.cc  Vm.h
jlox/: pom.xml  readme.md
jlox/src/main/java/com/nay/: App.java  Lox.java
jlox/src/main/java/com/nay/lox/: Environment.java  ErrorReporter.java  ErrorToken.java  Expr.java  Interpreter.java  Stmt.java  (+15 more)
jlox/src/main/resources/code/: bug_comment.lox  test1.lox  test2.lox  test3.lox  test4.lox  test5.lox
jlox/src/test/java/com/nay/: AppTest.java
test/: conftest.py  utils.py
test/assignment/: test_assigment.py
test/assignment/lox/: associativity.lox
test/print/: test_print.py
test/print/lox/: string.lox
(+2 files in other folders)
